# stoic

./: .gitignore  LICENSE  README.md
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs  service.rs  setup.rs
stoic/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
stoic/pages/: index.html
stoic/src/: App.svelte  app.css
tauri-runtime-wry-1.0.0-alpha.8/: .cargo_vcs_info.json  Cargo.toml
tauri-runtime-wry-1.0.0-alpha.8/src/: lib.rs  proxy.rs
